code25_all/scala/11319111.txt
fold
foldLeft
scala> Array("1","2","3").foldLeft(0)(_ + _.toInt)
res6: Int = 6

scala> Array("1","2","3").fold(0)(_ + _.toInt)
<console>:8: error: value toInt is not a member of Any
              Array("1","2","3").fold(0)(_ + _.toInt)
                                               ^

